# terminal-driver-mcp

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  TASKS.md  main.py  pyproject.toml
examples/: README.md  example_htop.py
src/terminal_control_mcp/: __init__.py  logging_config.py  server.py  xterm_session.py
